# AI-LLM-Ninja

./: .gitignore  README.md
AI-Agents/: .gitattributes  .gitignore
AI-Agents/voice_agent/: .env.example  README.md  linkedin_utils.py  pyproject.toml  requirements.txt
AI-Agents/voice_agent/src/: crew.py  main.py
AI-Agents/voice_agent/src/codeReferences/: faster_Video_feed.py  intro.py
AI-Agents/voice_agent/src/sound_feed/: sound-caputre.py  sound-recognizer.py  speech.py
AI-Agents/voice_agent/src/tools/: browser_control.py
AI-Agents/voice_agent/src/video_feed/: Image-data.py  test_camera.py  test_video_voice.py  video_feed.py
AI-Agents/voice_agent/voice-tts/: bryce.onnx.json
Amazon-AI-scrap-research/Amazon-Python-Scraper/: .gitignore  ExtendedProdctScraper.py  amazonExtracted.csv  data.json  pageResults.csv  pageScraper.py  productScraper.py  readme.md  scraper.py
Amazon-AI-scrap-research/Amazon-UI-Scraper/: package-lock.json
Chat-Application/Frontend/: package-lock.json
Chat-Application/backend/: .env  main.py  package-lock.json
Machine-Maintainance-Tabs/backend/: main.py  package.json
Machine-Maintainance-Tabs/frontend/: package.json  tsconfig.json
Machine-Maintenance-Tabs/backend/: app.py  readme.md
Machine-Maintenance-Tabs/frontend/: README.md  package-lock.json
RAG-Chatbot/Backend/: db.py  embedding_openai.py  groq_chat.py  main.py  openai_chat.py  requirements.txt  utils.py
Shopping-Assistant/app/: config.js  package.json
Shopping-Assistant/backend/: app.py
Vision-RAG/visionrag-backend/: Makefile  MaskCnn.py  MaskCnn_Enhanced.py  (+12 more)
(+2802 files in other folders)
